[gd_scene load_steps=36 format=3 uid="uid://civgdg6ang6q4"]

[ext_resource type="Script" path="res://levels/esterno_title/esterno_title.gd" id="1_2y21b"]
[ext_resource type="Script" path="res://dialogue/data/dialog_data.gd" id="2_q5avm"]
[ext_resource type="Texture2D" uid="uid://bulqj4cqluj" path="res://resource/assets/dialogueIMG/Testa .png" id="3_dhlrp"]
[ext_resource type="Script" path="res://requirement/scripts/requirement.gd" id="4_x38vt"]
[ext_resource type="Texture2D" uid="uid://6hbj2cjm3ibi" path="res://resource/assets/title/facciata-giorno.png" id="5_cfbhh"]
[ext_resource type="Texture2D" uid="uid://vhreabu8kwtq" path="res://resource/assets/title/fondo-giorno.jpg" id="5_gjyax"]
[ext_resource type="PackedScene" uid="uid://x1in8gvchlxv" path="res://link_system/link_system.tscn" id="6_8phnn"]
[ext_resource type="Texture2D" uid="uid://dhome106wd4ow" path="res://resource/assets/title/sole.png" id="6_ur36d"]
[ext_resource type="Texture2D" uid="uid://c1765eu750fo5" path="res://resource/assets/title/lampioni-spenti.png" id="7_18xae"]
[ext_resource type="PackedScene" uid="uid://cebw0e58m5xj5" path="res://camera/camera.tscn" id="7_c2a2l"]
[ext_resource type="PackedScene" uid="uid://b1124l3cpps2k" path="res://player/player.tscn" id="8_hk6ts"]
[ext_resource type="Texture2D" uid="uid://cpjmkubf8hubb" path="res://resource/assets/title/movimenti.png" id="8_hsd1f"]
[ext_resource type="PackedScene" uid="uid://0hi4ih83soya" path="res://link_system/portal.tscn" id="9_526m0"]
[ext_resource type="Texture2D" uid="uid://b4dgj0gn7uaxx" path="res://resource/assets/title/nuvole.png" id="9_qs4pb"]
[ext_resource type="PackedScene" uid="uid://bn66sogio8l8v" path="res://levels/title_screen/title_screen.tscn" id="10_cot7y"]
[ext_resource type="Texture2D" uid="uid://pwrq3lb21vbl" path="res://resource/assets/title/ringhiera-sopra.png" id="10_kkrbm"]
[ext_resource type="Texture2D" uid="uid://ck4yiohdwq52j" path="res://resource/assets/title/ringhiera-sotto.png" id="11_wedho"]
[ext_resource type="Texture2D" uid="uid://dycink1w47biv" path="res://resource/assets/title/cancelli.png" id="12_uq48i"]
[ext_resource type="Texture2D" uid="uid://d0abk5cbol38a" path="res://resource/assets/title/giorno_porta.png" id="13_yb1nw"]
[ext_resource type="Texture2D" uid="uid://cwh2ehc0ogkja" path="res://resource/assets/title/fondo-notte.jpg" id="14_xudt1"]
[ext_resource type="Texture2D" uid="uid://byq4iit0jw1if" path="res://resource/assets/title/facciata-notte.png" id="15_8l6n1"]
[ext_resource type="Texture2D" uid="uid://ck0iiswmluywo" path="res://resource/assets/title/lampioni-accesi.png" id="16_bniej"]
[ext_resource type="Texture2D" uid="uid://578ktanofgxi" path="res://resource/assets/title/ingresso-aperto.png" id="17_pknci"]
[ext_resource type="Texture2D" uid="uid://bnb5yjrf2n4c5" path="res://resource/assets/title/luna.png" id="17_rtrgh"]
[ext_resource type="Texture2D" uid="uid://6qm5c730ne3k" path="res://resource/assets/title/notte_porta.png" id="18_y6ut1"]
[ext_resource type="Texture2D" uid="uid://b8m0hvqp8pfk8" path="res://resource/assets/title/ingresso chiuso.png" id="23_mi14j"]
[ext_resource type="AudioStream" uid="uid://djnct0palh3v7" path="res://audio/bgmusic/go2024_title_v1.ogg" id="27_1so3i"]

[sub_resource type="Resource" id="Resource_vfy75"]
script = ExtResource("4_x38vt")
key = "start"
value = true

[sub_resource type="Resource" id="Resource_pevej"]
script = ExtResource("2_q5avm")
dialogue_text = Array[String](["It’s the right time now, I’m old and will retire soon", "This is the right work at the right time. Now that my nephews are here, I’m closer to them…", "That’s perfect.", "I better haste myself to work, then. Don't wish to disappoint my new boss."])
character_image = ExtResource("3_dhlrp")
text_name = "Angelo"
triggers = Array[ExtResource("4_x38vt")]([SubResource("Resource_vfy75")])

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kf3p5"]
load_path = "res://.godot/imported/lampioni-spenti.png-7f505827b5fa0f60d5aaa741a33b3fc8.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpik6"]
size = Vector2(297.727, 551.818)

[sub_resource type="Animation" id="Animation_irevx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TitleScreen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TitleScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Giorno/Env:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.39, 0.39)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(966, 619)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/ColorRect:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ti7s3"]
resource_name = "hide_title"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TitleScreen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TitleScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Giorno/Env:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.36667, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.39, 0.39), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(966, 619), Vector2(769, 1115)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 2.21914),
"update": 0,
"values": [0.0, -80.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.13333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_x6cir"]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wrdi"]
_data = {
"RESET": SubResource("Animation_irevx"),
"hide_title": SubResource("Animation_ti7s3"),
"intro": SubResource("Animation_x6cir")
}

[node name="Esterno_Title" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_2y21b")
dialog_1 = Array[ExtResource("2_q5avm")]([SubResource("Resource_pevej")])

[node name="Giorno" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Fondo" type="Node2D" parent="Giorno"]
position = Vector2(853, 449)
scale = Vector2(1.17209, 1.17209)

[node name="Fondo-giorno" type="Sprite2D" parent="Giorno/Fondo"]
texture = ExtResource("5_gjyax")

[node name="Env" type="Node2D" parent="Giorno"]
y_sort_enabled = true
position = Vector2(645, 600)
scale = Vector2(0.39, 0.39)

[node name="Sole" type="Sprite2D" parent="Giorno/Env"]
z_index = 1
position = Vector2(1635.9, -1133.33)
texture = ExtResource("6_ur36d")

[node name="Lampioni-spenti2" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(808, 132)
texture = SubResource("CompressedTexture2D_kf3p5")
offset = Vector2(18.3636, -196.727)
region_enabled = true
region_rect = Rect2(13, 1, 272, 573)

[node name="StaticBody2D" type="StaticBody2D" parent="Giorno/Env/Lampioni-spenti2"]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Giorno/Env/Lampioni-spenti2/StaticBody2D"]
polygon = PackedVector2Array(-30, 10, -50, 28, -56, 82, 5, 96, 77, 81, 65, 27, 23, 4)

[node name="Facciata-giorno" type="Sprite2D" parent="Giorno/Env"]
texture = ExtResource("5_cfbhh")

[node name="StaticBody2D" type="StaticBody2D" parent="Giorno/Env/Facciata-giorno"]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Giorno/Env/Facciata-giorno/StaticBody2D"]
polygon = PackedVector2Array(-204, 748, -354, 1035, 542, 1035, 1238, 1035, 943.59, 128.205, 151.282, 130.769, 77, 278, -19, 482, -254, 389, -435, 276, -497.436, 194.872, -612.821, 197.436, -620.513, -125.641, -720, -51, -661.538, 243.59, -371, 521, -244, 596, -205, 641, -202, 673, -382, 1033, -739, 331, -799, -307, -512, -431, -430, -376, 1018, 96, 1300, 1036, 1237, 1109, -382, 1086, -368, 1032, -202, 649, -192, 727)

[node name="Movimenti" type="Sprite2D" parent="Giorno/Env"]
y_sort_enabled = true
position = Vector2(394.872, 7.69226)
texture = ExtResource("8_hsd1f")
offset = Vector2(-16.6898, 290.49)

[node name="Nuvole" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(-309.091, -992.727)
texture = ExtResource("9_qs4pb")

[node name="Ringhiera-sopra" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(-441.026, 158.974)
texture = ExtResource("10_kkrbm")
offset = Vector2(230.117, 142.844)

[node name="Ringhiera-sotto" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(-174.359, 643.59)
texture = ExtResource("11_wedho")
offset = Vector2(-229.277, -199.954)

[node name="Cancelli" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(139, 1070)
texture = ExtResource("12_uq48i")
offset = Vector2(2.81812, -215.455)

[node name="Lampioni-spenti" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(871, 913)
texture = ExtResource("7_18xae")
offset = Vector2(-24.6364, -257.727)
region_enabled = true
region_rect = Rect2(0, 677, 302, 673)

[node name="StaticBody2D" type="StaticBody2D" parent="Giorno/Env/Lampioni-spenti"]
position = Vector2(-22, -13)
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Giorno/Env/Lampioni-spenti/StaticBody2D"]
position = Vector2(-849, -900)
polygon = PackedVector2Array(827, 901, 800, 921, 782, 960, 782, 977, 794, 984, 854, 997, 899, 994, 929, 961, 930, 921, 897, 900)

[node name="GiornoPorta" type="Sprite2D" parent="Giorno/Env"]
y_sort_enabled = true
position = Vector2(-636.364, 592.727)
texture = ExtResource("13_yb1nw")
offset = Vector2(636.364, -592.727)

[node name="Entrance" parent="Giorno/Env" instance=ExtResource("9_526m0")]
position = Vector2(-707.692, 43.59)
level_id = "ingresso"
link_id = "ExitDoor"

[node name="MusicStart" type="Area2D" parent="Giorno/Env"]
z_index = 1
position = Vector2(-707.692, -551.282)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Giorno/Env/MusicStart"]
position = Vector2(-75, 528)
shape = SubResource("RectangleShape2D_kpik6")

[node name="Player" parent="Giorno/Env" instance=ExtResource("8_hk6ts")]
unique_name_in_owner = true
position = Vector2(124.706, 515.294)

[node name="Ingresso-aperto" type="Sprite2D" parent="Giorno/Env"]
position = Vector2(135.897, 917.949)
texture = ExtResource("17_pknci")
offset = Vector2(5.12854, -20.5129)

[node name="StaticBody2D" type="StaticBody2D" parent="Giorno/Env/Ingresso-aperto"]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Giorno/Env/Ingresso-aperto/StaticBody2D"]
polygon = PackedVector2Array(-158.974, 33.3333, -128.205, 38.4614, -133.333, 123.077, -333.333, 128.205, -323.077, 25.6409)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Giorno/Env/Ingresso-aperto/StaticBody2D"]
polygon = PackedVector2Array(258.974, 64.1025, 241.026, 120.513, 279.487, 123.077, 323.077, 123.077, 323.077, 66.6665)

[node name="Notte" type="Node2D" parent="."]
visible = false
y_sort_enabled = true

[node name="Fondo-notte" type="Sprite2D" parent="Notte"]
texture = ExtResource("14_xudt1")

[node name="Facciata-notte" type="Sprite2D" parent="Notte"]
texture = ExtResource("15_8l6n1")

[node name="Lampioni-accesi" type="Sprite2D" parent="Notte"]
position = Vector2(836.364, 287.273)
texture = ExtResource("16_bniej")

[node name="Luna" type="Sprite2D" parent="Notte"]
position = Vector2(1469.09, -1032.73)
texture = ExtResource("17_rtrgh")

[node name="Nuvole" type="Sprite2D" parent="Notte"]
position = Vector2(-309.091, -992.727)
texture = ExtResource("9_qs4pb")

[node name="Ringhiera-sopra" type="Sprite2D" parent="Notte"]
position = Vector2(-210.909, 301.818)
texture = ExtResource("10_kkrbm")

[node name="Ringhiera-sotto" type="Sprite2D" parent="Notte"]
position = Vector2(-403.636, 443.636)
texture = ExtResource("11_wedho")

[node name="Cancelli" type="Sprite2D" parent="Notte"]
position = Vector2(141.818, 854.545)
texture = ExtResource("12_uq48i")

[node name="NottePorta" type="Sprite2D" parent="Notte"]
position = Vector2(-698.182, 381.818)
texture = ExtResource("18_y6ut1")
offset = Vector2(698.182, -381.818)

[node name="IngressoChiuso" type="Sprite2D" parent="Notte"]
position = Vector2(705, 950)
scale = Vector2(0.39, 0.39)
texture = ExtResource("23_mi14j")

[node name="LinkSystem" parent="." node_paths=PackedStringArray("player_ref") instance=ExtResource("6_8phnn")]
player_ref = NodePath("../Giorno/Env/Player")

[node name="WestDoor" type="Node2D" parent="LinkSystem"]
position = Vector2(394, 779)

[node name="ColorRect" type="ColorRect" parent="LinkSystem/WestDoor"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.435294, 0.580392, 0.34902, 1)
metadata/_edit_lock_ = true

[node name="CameraFollow" parent="." node_paths=PackedStringArray("player_ref") instance=ExtResource("7_c2a2l")]
position = Vector2(962, 543)
player_ref = NodePath("../CharacterBody2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource("10_cot7y")]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 2360.0
offset_bottom = 1408.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2wrdi")
}
autoplay = "intro"

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(966, 619)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_1so3i")
autoplay = true
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Giorno/Env/MusicStart" to="." method="_on_music_start_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
